--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -6,4 +6,4 @@
 @import "node_modules/font-awesome/scss/font-awesome";
 
 // Draftjs
-@import 'node_modules/draft-js/dist/Draft';
+@import url('./Draft.css');
