--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -4,7 +4,8 @@ html
     meta(charset='utf-8')/
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')/
     title Editor
-    link(href='../css/draftjs-editor.css' rel='stylesheet')/
+    link(href='../css/index.css' rel='stylesheet')/
+    link(href='../css/Draft.css' rel='stylesheet')/
   body
     div#editor
     script(src='../js/draftjs-editor.js')
