--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,8 +2,9 @@
 @import "variables";
 @import "node_modules/bootstrap/scss/bootstrap";
 
-// Font-awesome
-@import "node_modules/font-awesome/scss/font-awesome";
+// Fontawesome
+@import 'node_modules/@fortawesome/fontawesome-free-webfonts/scss/fontawesome';
+@import 'node_modules/@fortawesome/fontawesome-free-webfonts/scss/fa-solid';
 
 // Draftjs
 //@import url('./Draft.css');
